@startuml
entity "User" as user {
    * id : string <<PK>>
    --
    username : string
    fullName : string
    email : string
    password : string
    role : string
    createdAt : date
    updatedAd : date
}

entity "Task" as task {
    * id : string <<PK>>
    --
    taskName : string
    description : string
    status : string
    startDate : date
    dueDate : date
    createdAt : date
    updateAt : date
    projectId : string <<FK>>
    parentTaskId : string <<FK>>
    assignedUserId : string <<FK>>
    createdBy : string <<FK>>
}

entity "Project" as project {
    * id : string <<PK>>
    --
    name : string
    description : string
    startDate : date
    endDate : date
    createdBy : string <<FK>>
}

entity "UserProject" as userProject {
    * userId : string <<FK>>
    * projectId : string <<FK>>
    --
    role : string
    joinedAt : date
}

user ||--o{ userProject : "join with role"
project ||--o{ userProject : "includes"
user ||--o{ task : "assigned to"
user ||--o{ task : "created by"
task }o--|| project : "belongs to"
user ||--o{ project : "created by"
task ||--o| task : "is parent of"
@enduml
